--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Xu Zi Kan, I am 16 years old, I am an international school student, I love sports and listening to music.</p>
+          <p>My name is Xu Zi Kan, I am 16 years old, I am an international school student, I love sports and listening
+            to music.</p>
         </div>
 
         <div class="row">
@@ -96,16 +97,13 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Student </h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
-            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 2006</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span></span>https://sereinalw.github.io/</li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
+                    <span></span>https://sereinalw.github.io/
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Beijing, China</span></li>
                 </ul>
@@ -119,7 +117,9 @@
               </div>
             </div>
             <p>
-              I like to play basketball and volleyball, I think playing basketball and volleyball not only can exercise physical fitness but also can improve teamwork ability. My favorite singer is Jay Chou. When I am in a bad mood, listening to his songs always makes me feel happy.
+              I like to play basketball and volleyball, I think playing basketball and volleyball not only can exercise
+              physical fitness but also can improve teamwork ability. My favorite singer is Jay Chou. When I am in a bad
+              mood, listening to his songs always makes me feel happy.
             </p>
           </div>
         </div>
@@ -132,37 +132,48 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>A dynamic and driven individual with a passion for sporting . With 2 years of experience in basketball, Xu zijian has developed a strong skillset in playing basketball. Known for [insert positive qualities or achievements], I am  a natural leader and team player. When not working. With an unwavering commitment to excellence, I am sure to make a lasting impact wherever they go.</p>
+          <p>A dynamic and driven individual with a passion for sporting. With 2 years of experience in basketball,
+            I have developed a strong skillset in playing basketball. Known for enthusiasm and warm heart, I am a
+            natural leader and team player.
+            With an unwavering commitment to excellence, I am sure to make a lasting impact wherever they go.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Senior High School</h4>
-              <h5>2020 - 2024</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Once you really get used to Wangfu, you will understand why it is an attractive school. About the quality of teaching, I guess, the faculty of BRS is still okay, many teachers who have returned from famous schools and most of them are very young. Although some have little experience, but all can communicate with you like friends and help you. The teachers will not force you to learn, but the TOEFL SAT test date and the application deadline are always reminding you that you have to take the test to get results. It's your own business if you don't learn in the end anyway. In addition, there are elite classes in each grade, and there are big cows in the elite classes, so when you are in an environment with such people, people with ambitious will work harder. In fact, after going abroad, I found that the environment of Wangfu is really close to that of foreign countries, so you can let yourself go first and then see if you can find yourself. And the resources of Wangfu are really good. Let's talk about my personal experience first. First of all, we have our own TOEFL test center, and the school also moves to provide you with TPO and PSAT exams, so if you are preparing to go abroad, it is still a much better atmosphere than the general high school. Then there's AP, which is related to the quality of teaching I mentioned earlier. The teachers are not bad, but they don't push you or fill you in, so it depends on the individual. So let's just say that my sophomore year of high school scored 3 out of 5, but many of my classmates who took the same class as me certainly did not have this result, some 7 out of 5, some just abandoned the test. Survival of the fittest is also a form of elite selection, as is going to a foreign university. The three 5's helped me a lot in college, transferring 9 credits, which is equivalent to 3 classes free, which is a big saving in terms of time and finance.
-</p>
+              <h5>2020 - present</h5>
+              <p><em>Beijing Royal High School, Beijing, China</em></p>
+              <p>Once you really get used to BRS, you will understand why it is an attractive school. About the
+                quality of teaching, I guess, the faculty of BRS is still okay, many teachers who have returned from
+                famous schools and most of them are very young. Although some have little experience, but all can
+                communicate with you like friends and help you. The teachers will not force you to learn, but the TOEFL
+                SAT test date and the application deadline are always reminding you that you have to take the test to
+                get results. It's your own business if you don't learn in the end anyway. In addition, there are elite
+                classes in each grade, and there are big cows in the elite classes, so when you are in an environment
+                with such people, people with ambitious will work harder. In fact, after going abroad, I found that the
+                environment of Wangfu is really close to that of foreign countries, so you can let yourself go first and
+                then see if you can find yourself. And the resources of Wangfu are really good. Let's talk about my
+                personal experience first. First of all, we have our own TOEFL test center, and the school also moves to
+                provide you with TPO and PSAT exams, so if you are preparing to go abroad, it is still a much better
+                atmosphere than the general high school. Then there's AP, which is related to the quality of teaching I
+                mentioned earlier. The teachers are not bad, but they don't push you or fill you in, so it depends on
+                the individual. So let's just say that my sophomore year of high school scored 3 out of 5, but many of
+                my classmates who took the same class as me certainly did not have this result, some 7 out of 5, some
+                just abandoned the test. Survival of the fittest is also a form of elite selection, as is going to a
+                foreign university. The three 5's helped me a lot in college, transferring 9 credits, which is
+                equivalent to 3 classes free, which is a big saving in terms of time and finance.
+              </p>
             </div>
             <div class="resume-item">
               <h4>Junior High School</h4>
               <h5>2017 - 2020</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>I studied at Xinhai Experimental Middle School in Lianyungang City, Jiangsu Province in junior high school. This school is very strict in educating students, but at the same time it gives me a lot of happiness, the teachers and students are good. I also made a lot of friends</p>
+              <p><em>Xinhai Experimental Middle School, Lianyungang, China</em></p>
+              <p>I studied at Xinhai Experimental Middle School in Lianyungang City, Jiangsu Province in junior high
+                school. This school is very strict in educating students, but at the same time it gives me a lot of
+                happiness, the teachers and students are good. I also made a lot of friends.</p>
             </div>
           </div>
         </div>
@@ -198,8 +209,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/natural1.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/natural1.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/natural1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -209,8 +220,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/natural2.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/natural2.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/natural2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -220,8 +231,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/natural3.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/natural3.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/natural3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -231,8 +242,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/natural4.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/natural4.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/natural4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -242,8 +253,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/idol1.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/idol1.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/idol1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -253,8 +264,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/idol2.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/idol2.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/idol2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -264,8 +275,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/idol3.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/idol3.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/idol3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -275,8 +286,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/life1.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/life1.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/life1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Card 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -286,18 +297,18 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/life2.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/life2.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/life2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-life">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/life3.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/life3.jpeg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/life3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
